# segagame_bot

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-prod.yml  deploy.yml  linters.yml  tests.yml
app/: __init__.py  bot_runner.py  bot_setup.py  buttons.py  common_handlers.py  settings.py
assets/: __init__.py
etc/: supervisor-example.conf
tests/: __init__.py  test_buy_token.py  test_get_keyboard.py  test_main.py  test_send_welcome.py  test_show_chats.py  test_show_draw.py  test_show_info.py  test_show_video.py
