[tool.poetry]
name = "segagame_bot"
version = "0.1.0"
description = ""
authors = ["Irina <eira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 125
profile = "black"


[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true
ignore_missing_imports = true